--- a/launcher_config.json
+++ b/launcher_config.json
@@ -23,7 +23,7 @@ NOTE: Set it to "false" or only "" to not use the client folder, so everything w
 			"name": "bin"
 		}
 	],
-	"clientFolder": "Tibia",
+	"clientFolder": "LethalOT Server",
 	"newClientUrl" : "https://github.com/LethalMyk/LethalOTClient/releases/download/V1.0.0/client-to-update.zip",
 	"clientExecutable": "client.exe"
 }
